[package]
name = "pallet-property-governance"
version = "4.0.0-dev"
description = "The Xcavate pallet property governance"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/MarketplaceMVP_Substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"], optional = true }
frame-benchmarking = {  default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }
frame-system = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }

pallet-nfts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }
pallet-balances = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }
pallet-assets = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }
pallet-nft-fractionalization = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }

# Local dependencies
pallet-whitelist = { path = "../whitelist", default-features = false }
pallet-nft-marketplace = { path = "../nft-marketplace", default-features = false }
pallet-property-management = { path = "../property-management", default-features = false }

[dev-dependencies]
sp-core = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }
sp-io = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }
sp-runtime = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.3.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"pallet-nfts/std",
	"pallet-whitelist/std",
	"pallet-balances/std",
	"pallet-nft-marketplace/std",
	"pallet-assets/std",
	"pallet-nft-fractionalization/std",
	"pallet-property-management/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]